--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="30sp"
+            android:textSize="18sp"
             android:background="#888888"
             android:padding="10dp"
     />
@@ -31,15 +31,16 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:padding="10dp"
-            android:textSize="30sp"
+            android:textSize="18sp"
             android:background="#888888"
     />
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
+            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ivLanguageImg" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTimer"/>
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ivLanguageImg" android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvTimer" android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvResult"/>
     <Button
             android:text="Button"
             android:layout_width="0dp"
@@ -52,35 +53,35 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btAnswer2" android:layout_marginBottom="8dp"
+            android:id="@+id/btAnswer2" android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toTopOf="@+id/btAnswer3" android:tag="2" android:onClick="chooseAnswer"/>
     <Button
             android:text="Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btAnswer1" android:layout_marginBottom="8dp"
+            android:id="@+id/btAnswer1" android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toTopOf="@+id/btAnswer2" android:tag="1" android:onClick="chooseAnswer"/>
     <Button
             android:text="Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btAnswer0" android:layout_marginBottom="8dp"
+            android:id="@+id/btAnswer0" android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toTopOf="@+id/btAnswer1" android:tag="0" android:onClick="chooseAnswer"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tvResult" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/btAnswer0" android:textSize="30sp"/>
+            android:id="@+id/tvResult" android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/btAnswer0" android:textSize="24sp"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvTestMath" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvResult" android:textSize="40sp"/>
+            app:layout_constraintBottom_toTopOf="@+id/tvResult" android:textSize="18sp" android:visibility="visible"/>
 
 </android.support.constraint.ConstraintLayout>
