--- a/app/src/main/res/layout/activity_end_quiz.xml
+++ b/app/src/main/res/layout/activity_end_quiz.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EndQuizActivity">
+        tools:context=".EndQuizActivity" android:background="@drawable/background_light_blue">
 
     <TextView
             android:text="Final Score: 25/28"
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndScore" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvEndRank" android:textSize="30sp"/>
+            app:layout_constraintBottom_toTopOf="@+id/tvEndRank" android:textSize="30sp" android:textColor="#373F47"/>
     <TextView
             android:text="Weekly Rank: 134"
             android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndRank"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/btPlayAgain" android:textSize="18sp"/>
+            app:layout_constraintBottom_toTopOf="@+id/btPlayAgain" android:textSize="18sp" android:textColor="#373F47"/>
     <Button
             android:text="Play Again"
             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
@@ -42,5 +42,5 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndStatus" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvEndScore"
-            android:textSize="50sp"/>
+            android:textSize="50sp" android:textColor="#373F47"/>
 </android.support.constraint.ConstraintLayout>
