--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".QuizActivity">
+        tools:context=".QuizActivity" android:background="@drawable/background_light_blue">
 
     <TextView
             android:text="30 s"
@@ -17,9 +17,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="18sp"
-            android:background="#888888"
+            android:background="#6C91C2"
             android:padding="10dp"
-    />
+            android:textColor="#ffffff"/>
 
     <TextView
             android:text="0/0"
@@ -32,8 +32,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:padding="10dp"
             android:textSize="18sp"
-            android:background="#888888"
-    />
+            android:background="#6C91C2"
+            android:textColor="#ffffff"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
@@ -75,13 +75,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvResult" android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/btAnswer0" android:textSize="24sp"/>
+            app:layout_constraintBottom_toTopOf="@+id/btAnswer0" android:textSize="24sp" android:textColor="#373F47"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvTestMath" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tvResult" android:textSize="18sp" android:visibility="visible"/>
+            app:layout_constraintBottom_toTopOf="@+id/tvResult" android:textSize="18sp" android:visibility="visible"
+            android:textColor="#373F47"/>
 
 </android.support.constraint.ConstraintLayout>
