--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -34,12 +34,12 @@
             android:textSize="18sp"
             android:background="#6C91C2"
             android:textColor="#ffffff"/>
-    <ImageView
-            android:layout_width="wrap_content"
+    <com.loftydevelopment.helloworldquiz.PinchZoomPan
+            android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ivLanguageImg" android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTimer" android:layout_marginBottom="4dp"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ivLanguageImg" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvTimer" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toTopOf="@+id/tvResult"/>
     <Button
             android:text="Button"
