--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity" android:background="@drawable/background_light_blue">
+
+
+    <android.support.v7.widget.Toolbar android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:background="@color/colorPrimary"
+        android:id="@+id/toolbar"
+    </android.support.v7.widget.Toolbar>
+
     <Button
             android:text="Start Quiz"
             android:layout_height="wrap_content" android:id="@+id/btStartQuiz" android:layout_marginTop="8dp"
@@ -21,4 +28,10 @@
             app:layout_constraintTop_toBottomOf="@+id/btStartQuiz" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_width="200dp" android:onClick="loadScores"/>
+    <TextView
+            android:text="Logged In: No"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" android:id="@+id/tvLoginStatus" android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
