--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -31,8 +31,8 @@
             android:ems="10"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/etDisplayName" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/tvAccountSet" android:hint="enter display name"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/tvDisplayName"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"/>
 
     <TextView
             android:text="Old Password:"
@@ -46,12 +46,11 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
             android:ems="10"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDisplayName"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/etOldPw"
-            app:layout_constraintStart_toEndOf="@+id/tvOldPw" android:layout_marginStart="8dp"
-            android:hint="enter password"/>
+            android:hint="enter password" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
+            android:layout_marginStart="8dp" android:inputType="textPassword"/>
 
     <TextView
             android:text="New Password:"
@@ -65,13 +64,13 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/etNewPw"
             android:hint="enter new password" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/etOldPw" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvNewPw"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"
+            android:inputType="textPassword"/>
 
     <TextView
             android:text="Confirm Password:"
@@ -85,19 +84,63 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="45dp"
-            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/etNewPw2"
             android:hint="confirm new password" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/etNewPw" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:inputType="textPassword"/>
+
+    <TextView
+            android:text="Application Settings"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:id="@+id/tvAppSet"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNewPw2"/>
+
+    <TextView
+            android:text="Application Sound Effects:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvSound" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvAppSet" android:textSize="18sp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
+
+    <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cbSound" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvAppSet"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+    />
+
     <Button
             android:text="Save Settings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSaveSet"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cbSound"
+            app:layout_constraintStart_toEndOf="@+id/tvHiddenCenter" android:layout_marginStart="8dp"
+            android:onClick="saveListener"/>
+
+    <Button
+            android:text="Cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnCancelSet"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cbSound"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/tvHiddenCenter" android:layout_marginEnd="8dp"
+            android:onClick="cancelListener"/>
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btnSaveAccount" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etNewPw2"/>
+            android:id="@+id/tvHiddenCenter" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cbSound"/>
 
 </android.support.constraint.ConstraintLayout>
