Minor additions to the toolbar.

--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -12,6 +12,11 @@
     />
 
     <item
+            android:title="Sign Up"
+            android:id="@+id/menuSignUp"
+    />
+
+    <item
             android:title="Logout"
             android:id="@+id/menuLogout"
     />
