--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -34,7 +34,7 @@
             android:textSize="18sp"
             android:background="#6C91C2"
             android:textColor="#ffffff"/>
-    <com.loftydevelopment.helloworldquiz.PinchZoomPan
+    <com.loftydevelopment.helloworldquiz.PanZoomView
             android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
             app:layout_constraintStart_toStartOf="parent"
