--- a/app/src/main/res/layout/label.xml
+++ b/app/src/main/res/layout/label.xml
@@ -11,10 +11,10 @@
             android:weightSum="3" >
 
         <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
             <TextView
                     android:layout_width="match_parent"
@@ -24,10 +24,10 @@
         </LinearLayout>
 
         <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
             <TextView
                     android:layout_width="match_parent"
@@ -37,10 +37,10 @@
         </LinearLayout>
 
         <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
             <TextView
                     android:layout_width="match_parent"
