--- a/app/src/main/res/layout/label.xml
+++ b/app/src/main/res/layout/label.xml
@@ -4,7 +4,7 @@
               android:layout_height="wrap_content"
               android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -13,34 +13,39 @@
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:id="@+id/linear1"
+        >
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:text="#" android:id="@+id/textView_rank"/>
+                    android:text="#" android:id="@+id/textView_rank" android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_toRightOf="@+id/linear1"
+                android:id="@+id/linear2"
+        >
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:text="username" android:id="@+id/textView_name"/>
+                    android:text="username" android:id="@+id/textView_name" android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/linear3"
+        >
 
             <TextView
                     android:layout_width="match_parent"
@@ -48,8 +53,8 @@
                     android:padding="8dp"
                     android:text="99" android:id="@+id/textView_score"
                     android:textAlignment="viewEnd"
-            />
+                    android:textSize="18sp"/>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
