Finished the options activity to update the user's display name and password.

--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -7,7 +7,7 @@
     />
 
     <item
-            android:title="Login"
+            android:title="Sign In"
             android:id="@+id/menuLogin"
     />
 
