--- a/app/src/main/res/layout/activity_end_quiz.xml
+++ b/app/src/main/res/layout/activity_end_quiz.xml
@@ -8,7 +8,7 @@
         tools:context=".EndQuizActivity" android:background="@drawable/background_light_blue">
 
     <TextView
-            android:text="Final Score: 25/28"
+            android:text="Final Score: 0/0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
@@ -21,20 +21,21 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndRank"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/btPlayAgain" android:textSize="18sp" android:textColor="#373F47"/>
+            app:layout_constraintBottom_toTopOf="@+id/btPlayAgain" android:textSize="18sp" android:textColor="#373F47"
+            android:visibility="invisible"/>
     <Button
             android:text="Play Again"
             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btPlayAgain" android:layout_width="75pt"
-            android:onClick="playAgain"/>
+            android:onClick="playAgain" android:textSize="18sp"/>
     <Button
             android:text="Main Menu"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/btMainMenu" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/btPlayAgain" android:layout_width="75pt"
-            android:onClick="mainMenu"/>
+            android:onClick="mainMenu" android:textSize="18sp"/>
     <TextView
             android:text="A new high score!"
             android:layout_width="wrap_content"
@@ -42,5 +43,5 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tvEndStatus" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvEndScore"
-            android:textSize="50sp" android:textColor="#373F47"/>
+            android:textSize="50sp" android:textColor="#373F47" android:visibility="invisible"/>
 </android.support.constraint.ConstraintLayout>
