--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -13,83 +13,141 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/tvAccountSet" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textSize="18sp" android:textStyle="bold"/>
 
     <TextView
-            android:text="Display Name:"
+            android:text="Sign in to view Account Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvDisplayName" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/etDisplayName"
-            android:textSize="18sp" app:layout_constraintBottom_toBottomOf="@+id/etDisplayName"/>
+            android:id="@+id/tvSignIn" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvAccountSet" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvAppSet" app:layout_constraintEnd_toEndOf="@+id/accountlyt"
+            app:layout_constraintStart_toStartOf="@+id/accountlyt" android:layout_marginStart="8dp"
+            android:textSize="24sp" android:visibility="visible"/>
+    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
+                                                 android:layout_height="wrap_content"
+                                                 app:layout_constraintStart_toStartOf="parent"
+                                                 android:id="@+id/accountlyt"
+                                                 android:layout_marginTop="8dp"
+                                                 app:layout_constraintTop_toBottomOf="@+id/tvAccountSet"
+                                                 android:visibility="invisible">
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/etDisplayName" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvAccountSet" android:hint="enter display name"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBarPw" app:layout_constraintStart_toEndOf="@+id/btnSavePw"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/etNewPw2" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/btnSavePw" android:visibility="gone"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBarName"
+                app:layout_constraintStart_toEndOf="@+id/btnSaveName" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/etOldPw"
+                android:visibility="gone"/>
+        <Button
+                android:text="Update Display Name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnSaveName"
+                android:layout_marginStart="8dp"
+                android:onClick="saveDisplayListener" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/etDisplayName" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+                android:text="Display Name:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvDisplayName" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="@+id/etDisplayName"
+                android:textSize="18sp" app:layout_constraintBottom_toBottomOf="@+id/etDisplayName"/>
 
-    <TextView
-            android:text="Old Password:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvOldPw"
-            app:layout_constraintTop_toTopOf="@+id/etOldPw" app:layout_constraintBottom_toBottomOf="@+id/etOldPw"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:textSize="18sp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/etDisplayName"
+                android:hint="enter display name"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDisplayName"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/etOldPw"
-            android:hint="enter password" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
-            android:layout_marginStart="8dp" android:inputType="textPassword"/>
+        <TextView
+                android:text="Old Password:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvOldPw"
+                app:layout_constraintTop_toTopOf="@+id/etOldPw" app:layout_constraintBottom_toBottomOf="@+id/etOldPw"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:textSize="18sp"/>
 
-    <TextView
-            android:text="New Password:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvNewPw"
-            android:textSize="18sp" app:layout_constraintTop_toTopOf="@+id/etNewPw"
-            app:layout_constraintBottom_toBottomOf="@+id/etNewPw" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/etOldPw"
+                android:hint="enter password" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
+                android:layout_marginStart="8dp" android:inputType="textPassword" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/btnSaveName"/>
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/etNewPw"
-            android:hint="enter new password" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etOldPw" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"
-            android:inputType="textPassword"/>
+        <TextView
+                android:text="New Password:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvNewPw"
+                android:textSize="18sp" app:layout_constraintTop_toTopOf="@+id/etNewPw"
+                app:layout_constraintBottom_toBottomOf="@+id/etNewPw" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
 
-    <TextView
-            android:text="Confirm Password:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvNewPw2"
-            android:textSize="18sp" app:layout_constraintTop_toTopOf="@+id/etNewPw2"
-            app:layout_constraintBottom_toBottomOf="@+id/etNewPw2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/etNewPw"
+                android:hint="enter new password" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/etOldPw" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tvNewPw2" android:layout_marginStart="8dp"
+                android:inputType="textPassword"/>
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:ems="10"
-            android:id="@+id/etNewPw2"
-            android:hint="confirm new password" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etNewPw" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
-            android:layout_marginStart="8dp" android:inputType="textPassword"/>
+        <TextView
+                android:text="Confirm Password:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvNewPw2"
+                android:textSize="18sp" app:layout_constraintTop_toTopOf="@+id/etNewPw2"
+                app:layout_constraintBottom_toBottomOf="@+id/etNewPw2" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:ems="10"
+                android:id="@+id/etNewPw2"
+                android:hint="confirm new password" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/etNewPw" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/tvNewPw2"
+                android:layout_marginStart="8dp" android:inputType="textPassword"/>
+
+        <Button
+                android:text="Update Paswword"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnSavePw"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNewPw2"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:onClick="savePasswordListener"/>
+
+    </android.support.constraint.ConstraintLayout>
+
 
     <TextView
             android:text="Application Settings"
@@ -98,7 +156,8 @@
             android:id="@+id/tvAppSet"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNewPw2"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/accountlyt"
+            android:textSize="18sp" android:textStyle="bold"/>
 
     <TextView
             android:text="Application Sound Effects:"
@@ -117,25 +176,14 @@
     />
 
     <Button
-            android:text="Save Settings"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnSaveSet"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cbSound"
-            app:layout_constraintStart_toEndOf="@+id/tvHiddenCenter" android:layout_marginStart="8dp"
-            android:onClick="saveListener"/>
-
-    <Button
-            android:text="Cancel"
-            android:layout_width="0dp"
+            android:text="Back"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnCancelSet"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cbSound"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/tvHiddenCenter" android:layout_marginEnd="8dp"
-            android:onClick="cancelListener"/>
+            android:onClick="menuListener" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
